--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=Bookstore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=sql_server;Database=Bookstore;User Id=SA;Password=replaceWithYourPass;MultipleActiveResultSets=true;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
